# beta-example

./: README.md
client/: README.md  beta.proto  client.js  package-lock.json  package.json
map/: README.md
plugin/: .gitignore  CMakeLists.txt  README.md
plugin/src/: nodeprovider.cpp  pathprovider.h
provider/: Dockerfile  README.md  index.js  loader.js  map.js  package-lock.json  package.json  pathfinder.js  point.js  serializer.js  service.js
